# navi-backend

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/caddy/: navi-admin.caddy.notes.md
deploy/env/: navi-admin.env.example  navi-geo.env.example  navi-offroute.env.example
deploy/nginx/: navi-admin.conf.snippet  navi-config.conf.snippet  navi-contacts.conf.snippet  navi-geo.conf.snippet  navi-landclass.conf.snippet  navi-offroute.conf.snippet  navi-places.conf.snippet  navi-traffic.conf.snippet
deploy/systemd/: navi-admin.service  navi-config.service  navi-contacts.service  navi-geo.service  navi-landclass.service  navi-offroute.service  navi-places.service  navi-traffic.service
scripts/: README.md  overture_import.py
services/navi_admin/: admin_route.py  app.py  auth_route.py  fleet.py
services/navi_admin/tests/: test_admin.py  test_auth.py
services/navi_config/: admin.py  app.py  config_loader.py  config_route.py
services/navi_config/tests/: test_config.py
services/navi_contacts/: address_book.py  address_book_route.py  admin.py  app.py  contacts_db.py  contacts_route.py
services/navi_contacts/tests/: test_address_book.py  test_contacts.py
services/navi_geo/: address_book.py  admin.py  app.py  dem.py  geo_route.py  geocode.py  landclass_client.py  netsyms.py
services/navi_geo/tests/: test_geocode.py  test_reverse_bundle.py
services/navi_landclass/: admin.py  app.py  db.py  landclass_route.py
services/navi_landclass/tests/: test_landclass.py
services/navi_offroute/: admin.py  app.py  barriers.py  friction.py  mvum.py  offroute_route.py  router.py  trails.py
services/navi_offroute/tests/: test_offroute.py
services/navi_places/: admin.py  app.py  config.py  google_places.py  overture.py  place_cache.py  place_detail.py  place_route.py  wiki_client.py  wiki_index.py  wiki_rewrite.py  wiki_rewrite_client.py
services/navi_places/tests/: test_place.py
services/navi_traffic/: admin.py  app.py  traffic.py
services/navi_traffic/tests/: test_traffic.py
shared/: admin_info.py  auth.py  dem.py  git_sha.py
shared/tests/: test_dem.py  test_git_sha.py
